--- a/activities/templates/activities/base.html
+++ b/activities/templates/activities/base.html
@@ -5,19 +5,20 @@
 
 	{% load static %}
 
-	{# modified from http://django-bootstrap3.readthedocs.io/en/latest/quickstart.html #}
+	<meta charset="utf-8">
+    <link href="{% static 'lib/css/nv.d3.css' %}" rel="stylesheet" type="text/css">
+
+    <script src="{% static 'lib/js/jquery.min.js' %}"></script>
+    <script src="{% static 'lib/js/d3.v3.js' %}" charset="utf-8"></script>
+    <script src="{% static 'lib/js/nv.d3.js' %}"></script>
+
+    {# modified from http://django-bootstrap3.readthedocs.io/en/latest/quickstart.html #}
 	{# Load the tag library #}
 	{% load bootstrap3 %}
 
 	{# Load CSS and JavaScript #}
 	{% bootstrap_css %}
 	{% bootstrap_javascript %}
-
-	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
-	<meta charset="utf-8">
-    <link href="{% static 'lib/css/nv.d3.css' %}" rel="stylesheet" type="text/css">
-    <script src="{% static 'lib/js/d3.v3.js' %}" charset="utf-8"></script>
-    <script src="{% static 'lib/js/nv.d3.js' %}"></script>
 
 </head>
 <body>
