--- a/activities/templates/activities/upload.html
+++ b/activities/templates/activities/upload.html
@@ -12,7 +12,7 @@
 
         {% block content %}
 
-        <div class="container">
+        <div class="container-fluid">
 
             <!-- Upload form. Note enctype attribute! -->
             <form action="{% url "activities:upload" %}" method="post" enctype="multipart/form-data">
