--- a/activities/templates/activities/upload.html
+++ b/activities/templates/activities/upload.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 <!-- modified from https://github.com/axelpale/minimal-django-file-upload-example -->
+<!-- multiple file upload modified from https://www.calazan.com/adding-drag-and-drop-image-uploads-to-your-django-site-in-5-minutes-with-dropzonejs/ -->
 <!DOCTYPE html>
 <html>
     <head>
@@ -12,20 +13,15 @@
 
         {% block content %}
 
-        <div class="container-fluid">
+            <div class="container-fluid">
 
-            <!-- Upload form. Note enctype attribute! -->
-            <form action="{% url "activities:upload" %}" method="post" enctype="multipart/form-data">
-                {% csrf_token %}
+                <form action="" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="Send" />
+                </form>
 
-                <p>
-                    {{ form.docfile }}
-                </p>
-
-                <p><input type="submit" value="Upload"/></p>
-            </form>
-
-        </div>
+            </div>
 
         {% endblock %}
 
