--- a/athletes/templates/athletes/injury.html
+++ b/athletes/templates/athletes/injury.html
@@ -23,9 +23,18 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
 
                     <div class="form-group row">
 
-                        <label class="col-sm-1 col-form-label">Date: </label>
+                        <label class="col-sm-2 col-form-label">Date: </label>
                         <div for="start_time" class="col-sm-3">
                             <input type="date" for="date" name="date" class="form-control" required>
+                        </div>
+                        
+                    </div>
+
+                    <div class="form-group row">
+
+                        <label class="col-sm-2 col-form-label">Description: </label>
+                        <div for="date" class="col-sm-10">
+                            <textarea class="form-control" rows="10" type="text" name="comments" required></textarea>
                         </div>
                         
                     </div>
