--- a/athletes/templates/athletes/list.html
+++ b/athletes/templates/athletes/list.html
@@ -46,7 +46,7 @@
 			  		<td>{{ activity.avg_hr }}</td>
 			  		<td>{{ activity.avg_cadence }}</td>
 			  		<td>
-			  		<textarea style="height:75px; width:200px; background:#f2f2f2;" readonly>{{ activity.comments }}</textarea>
+			  		<textarea style="height:75px; background:#f2f2f2;" readonly>{{ activity.comments }}</textarea>
     				</td>
 			  	</tr>
 	          {% endfor %}
