--- a/athletes/templates/athletes/performance.html
+++ b/athletes/templates/athletes/performance.html
@@ -33,12 +33,22 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
                     <div class = "form-group row">
 
                         <div class="col-sm-4">
-                            <img src="{% static "img/performance.jpg" %}" alt="performance-scale" style="width:100%;">
+                            <img src="{% static "img/performance.png" %}" alt="performance" style="width:100%;">
                         </div>
                         
-                        <label class="col-sm-1 col-form-label">Value: </label>
-                        <div for="date" class="col-sm-1">
-                            <input type="number" for="value" name="value" class="form-control" min="1" max="4" required>
+                        <div class="col-sm-8">
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Value: </label>
+                                <div for="date" class="col-sm-2">
+                                    <input type="number" for="value" name="value" class="form-control" min="1" max="4" required>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Description: </label>
+                                <div for="date" class="col-sm-10">
+                                    <textarea class="form-control" rows="10" type="text" name="comments" required></textarea>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
