--- a/athletes/templates/athletes/help.html
+++ b/athletes/templates/athletes/help.html
@@ -13,7 +13,7 @@
                 <img src="">
 
                 <ol type="1">
-                  <li>Go to <a href="https://connect.garmin.com">Garmin Connect</a></li>
+                  <li>Go to <a href="https://connect.garmin.com" target="_blank">Garmin Connect</a></li>
                   <li>Navigate to the activity whose FIT file you'd like to download.</li>
                   <li>Click on the <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> button in the top right corner.</li>
                   <li>Click on "Export Original" from the dropdown menu. The downloaded file should end in ".zip" (e.g. 19204901.zip)</li>
