--- a/accounts/templates/accounts/create.html
+++ b/accounts/templates/accounts/create.html
@@ -60,7 +60,7 @@
 			<div class="form-group row">
 				<label for="password" class="col-sm-2 col-form-label">Password</label>
 				<div class="col-sm-10">
-					<input class="form-control" type="text" name="password" placeholder="*********" required>
+					<input class="form-control" type="password" name="password" placeholder="*********" required>
 				</div>
 			</div>
 
