--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -54,7 +54,7 @@
 				    </div>
 
 				    <div class="form-group">
-				    	<input class="form-control" name='password' type="text" placeholder="Password">
+				    	<input class="form-control" name='password' type="password" placeholder="Password">
 				    </div>
 
 
