streamlined weeks and fixed the dashboard.

--- a/athletes/templates/athletes/index.html
+++ b/athletes/templates/athletes/index.html
@@ -23,16 +23,40 @@
 				<div class="col-sm-4">
 					<div class="chart-wrapper">
 					  <div class="chart-title">
-					    This Week
+					    This Week -- {{ this_week }}
 					  </div>
 					  <div class="chart-stage">
 					    <table class="table-condensed">
 					    	<tr>
-						  		<td>Total Distance:</td>
+						  		<td>Weekly Mileage:</td>
 						  		{% if current_week != None %}
-							  		<td>{{ current_week.total_distance | two_decimals }}  miles</td>
+							  		<td>{{ current_week.acute_distance | two_decimals }}  miles</td>
 						  		{% else %}
 							  		<td>0.00  miles</td>
+						  		{% endif %}
+						  	</tr>
+						  	<tr>
+						  		<td>Mean Weekly Mileage Past Month:</td>
+						  		{% if current_week != None %}
+							  		<td>{{ current_week.chronic_distance | two_decimals }}  miles</td>
+						  		{% else %}
+							  		<td>0.00  miles</td>
+						  		{% endif %}
+						  	</tr>
+						  	<tr>
+						  		<td>Weekly sRPE:</td>
+						  		{% if current_week != None %}
+							  		<td>{{ current_week.acute_sRPE}}</td>
+						  		{% else %}
+							  		<td>0</td>
+						  		{% endif %}
+						  	</tr>
+						  	<tr>
+						  		<td>Mean Weekly sRPE Past Month:</td>
+						  		{% if current_week != None %}
+							  		<td>{{ current_week.chronic_sRPE}}</td>
+						  		{% else %}
+							  		<td>0</td>
 						  		{% endif %}
 						  	</tr>
 						  	<tr>
@@ -43,82 +67,128 @@
 							  		<td>0</td>
 						  		{% endif %}
 						  	</tr>
-						  	<tr>
-						  		<td>Elevation Gained:</td>
-						  		{% if current_week != None %}
-							  		<td>{{ current_week.total_elevation_gained | two_decimals}} feet</td>
-						  		{% else %}
-							  		<td>0  feet</td>
-						  		{% endif %}
-						  	</tr>
-						  	<tr>
-						  		<td>Average Speed:</td>
-								{% if current_week != None %}
-							  		<td>{{ current_week.avg_avg_speed | mps_to_time_per_mile }} mins / mile</td>
-						  		{% else %}
-							  		<td>0  mins / mile</td>
-						  		{% endif %}
-						  	</tr>
-						  	<tr>
-						  		<td>Average Heart Rate:</td>
-						  		{% if current_week != None %}
-							  		<td>{{ current_week.avg_avg_hr }} bpm</td>
-						  		{% else %}
-							  		<td>0  bpm</td>
-						  		{% endif %}
-						  	</tr>
-						  	<tr>
-						  		<td>Average Cadance:</td>
-						  		{% if current_week != None %}
-							  		<td>{{ current_week.avg_avg_cadence }} spm</td>
-						  		{% else %}
-							  		<td>0  spm</td>
-						  		{% endif %}
-						  	</tr>
 					    </table>
 					  </div>
 					</div>
 				</div>
 
 				<div class="col-sm-8">
-					<div class="chart-wrapper">
-						<div class="chart-title">
-							Sentiment
-						</div>
-							<div class="chart-stage">
-								<div id="sentiment">
-									<svg></svg>
-								</div>
-							</div>
-					</div>
-				</div>
+                    <div class="chart-wrapper">
+                        <div class="chart-title">
+                            Latest Run -- {{ activity.start_time }}
+                        </div>
+
+                        <div class="chart-stage">
+
+	                        <div class='row'>
+		                        <div class='col-sm-6'>
+
+			                        {% if activity.RPE == None %}
+
+		                            <div class="progress" style="margin-bottom: 5px">
+		                                <div class="progress-bar" role="progressbar" aria-valuenow="{{activity.RPE}}" 
+		                                aria-valuemin="0" aria-valuemax="10" style="width:100%; background: grey; ">
+		                                    RPE: {{activity.RPE}}
+		                                </div>
+		                            </div>
+
+		                            {% else %}
+
+		                                {% if activity.RPE <= 3 %}
+		                                <div class="progress" style="margin-bottom: 5px">
+		                                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="{{activity.RPE}}" 
+		                                    aria-valuemin="0" aria-valuemax="10" style="width:{{activity.RPE_percent}}%">
+		                                        RPE: {{activity.RPE}}
+		                                    </div>
+		                                </div>
+
+		                                {% else %}
+
+		                                    {% if activity.RPE <= 6 %}
+		                                    <div class="progress" style="margin-bottom: 5px">
+		                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{activity.RPE}}" 
+		                                        aria-valuemin="0" aria-valuemax="10" style="width:{{activity.RPE_percent}}%">
+		                                            RPE: {{activity.RPE}}
+		                                        </div>
+		                                    </div>
+
+		                                    {% else %}
+
+		                                        {% if activity.RPE <= 8 %}
+		                                        <div class="progress" style="margin-bottom: 5px">
+		                                            <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="{{activity.RPE}}" 
+		                                            aria-valuemin="0" aria-valuemax="10" style="width:{{activity.RPE_percent}}%">
+		                                                RPE: {{activity.RPE}}
+		                                            </div>
+		                                        </div>
+
+		                                        {% else %}
+
+		                                            <div class="progress" style="margin-bottom: 5px">
+		                                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="{{activity.RPE}}" 
+		                                                aria-valuemin="0" aria-valuemax="10" style="width:{{activity.RPE_percent}}%">
+		                                                    RPE: {{activity.RPE}}
+		                                                </div>
+		                                            </div>
+
+		                                        {% endif %}
+
+		                                    {% endif %}
+
+		                                {% endif %}
+
+		                            {% endif %}
+
+		                            <table class="table-condensed">
+		                                <tr>
+		                                    <td>Distance:</td>
+		                                    <td>{{ activity.tot_dist | two_decimals}} {% if activity.tot_dist != None %}miles{% endif %}</td>
+		                                </tr>
+		                                <tr>
+		                                    <td>Total Time:</td>
+		                                    <td>{{ activity.tot_time}} {% if activity.tot_time != None %}minutes{% endif %}</td>
+		                                </tr>
+		                                <tr>
+		                                    <td>Elevation Gained:</td>
+		                                    <td>{{ activity.elevation_gained }} {% if activity.elevation_gained != None %}feet{% endif %}</td>
+		                                </tr>
+		                                <tr>
+		                                    <td>Average Speed:</td>
+		                                    <td>{{ activity.avg_speed | mps_to_time_per_mile}} {% if activity.avg_speed != None %}mins / mile{% endif %}</td>
+		                                </tr>
+		                                <tr>
+		                                    <td>Average Heart Rate:</td>
+		                                    <td>{{ activity.avg_hr }} {% if activity.avg_hr != None %}bpm{% endif %}</td>
+		                                </tr>
+		                                <tr>
+		                                    <td>Average Cadance:</td>
+		                                    <td>{{ activity.avg_cadence }} {% if activity.avg_cadence != None %}spm{% endif %}</td>
+		                                </tr>
+		                            </table>
+		                        </div>
+
+		                        <div class='col-sm-6'>
+		                        	<label>Comments:</label>
+			                        <textarea readonly>{{activity.comments}}</textarea>
+		                        </div>
+	                        </div>
+
+                        
+
+                            
+                        </div>
+                    </div>
+                </div>
     		</div>
 
     		<div class="row">
 
-    			<div class="col-sm-12">
+    			<div class="col-sm-6">
 					<div class="chart-wrapper">
 						<div class="chart-title">
-							User Tags
+							Distance (External Workload)
 						</div>
-							<div class="chart-stage">
-								<div id="user_tags">
-									<svg></svg>
-								</div>
-							</div>
-					</div>
-				</div>
-
-    		</div>
-
-    		<div class="row">
-
-    			<div class="col-sm-12">
-					<div class="chart-wrapper">
-						<div class="chart-title">
-							Distance
-						</div>
-							<div class="chart-stage" style="padding-top: 50px;">
+							<div class="chart-stage" style="padding-top: 50px; padding-right: 50px;">
 								<div id="distance">
 									<svg></svg>
 								</div>
@@ -126,35 +196,13 @@
 					</div>
 				</div>
 
-    		</div>
-
-    		<div class="row">
-
-    			<div class="col-sm-12">
+				<div class="col-sm-6">
 					<div class="chart-wrapper">
 						<div class="chart-title">
-							Runs per Week
+							sRPE (Internal Workload)
 						</div>
-							<div class="chart-stage">
-								<div id="count">
-									<svg></svg>
-								</div>
-							</div>
-					</div>
-				</div>
-
-    		</div>
-
-
-    		<div class="row">
-
-    			<div class="col-sm-12">
-					<div class="chart-wrapper">
-						<div class="chart-title">
-							Speed
-						</div>
-							<div class="chart-stage">
-								<div id="speed">
+							<div class="chart-stage" style="padding-top: 50px; padding-right: 50px;">
+								<div id="sRPE">
 									<svg></svg>
 								</div>
 							</div>
@@ -165,47 +213,26 @@
 
     		<div class="row">
 
-    			<div class="col-sm-12">
+    			<div class="col-sm-6">
 					<div class="chart-wrapper">
 						<div class="chart-title">
-							Heart Rate
+							User Tags
 						</div>
-							<div class="chart-stage">
-								<div id="hr">
+							<div class="chart-stage" style="padding-top: 50px; padding-right: 50px;">
+								<div id="user_tags">
 									<svg></svg>
 								</div>
 							</div>
 					</div>
 				</div>
 
-    		</div>
-
-    		<div class="row">
-
-    			<div class="col-sm-12">
+				<div class="col-sm-6">
 					<div class="chart-wrapper">
 						<div class="chart-title">
-							Cadence
+							Injury and Performance Tags
 						</div>
-							<div class="chart-stage">
-								<div id="cadence">
-									<svg></svg>
-								</div>
-							</div>
-					</div>
-				</div>
-
-    		</div>
-
-    		<div class="row">
-
-    			<div class="col-sm-12">
-					<div class="chart-wrapper">
-						<div class="chart-title">
-							Elevation
-						</div>
-							<div class="chart-stage">
-								<div id="elevation">
+							<div class="chart-stage" style="padding-top: 50px; padding-right: 50px;">
+								<div id="performance_injury">
 									<svg></svg>
 								</div>
 							</div>
