--- a/athletes/templates/athletes/edit.html
+++ b/athletes/templates/athletes/edit.html
@@ -18,29 +18,73 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
 
                     {% csrf_token %}
 
+                    <!-- copied from http://stackoverflow.com/questions/14647723/django-forms-if-not-valid-show-form-with-error-message -->
+                    {% if form.errors %}
+                        <div class="alert alert-danger">
+                                <strong>Please correct the errors below.</strong>
+                        </div>
+                    {% endif %}
+
                     <div class="form-group row">
-                        <label for="first_name" class="col-sm-2 col-form-label">Name:</label>
+                        <div class="col-sm-2 col-form-label">
+                            <label for="name">Name:</label>
+                            {% if form.name.errors %}
+                                {% for error in form.name.errors %}
+                                    <div class="alert alert-danger">
+                                        <strong>{{ error | escape }}</strong>
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
+                        </div>
                         <div class="col-sm-5">
                             <input class="form-control" type="text" name="name" value="{{form.name.value}}" required>
+
                         </div>
 
 
-                        <label class="col-sm-1 col-form-label">Date: </label>
-                        <div for="start_time" class="col-sm-4">
+                        <div class="col-sm-2 col-form-label">
+                            <label for="start_time">Date:</label>
+                            {% if form.start_time.errors %}
+                                {% for error in form.start_time.errors %}
+                                    <div class="alert alert-danger">
+                                        <strong>{{ error | escape }}</strong>
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
+                        </div>
+                        <div for="start_time" class="col-sm-3">
                             <input type="datetime-local" for="start_time" name="start_time" class="form-control" value="{{form.start_time.value | date:'Y-m-d'}}T{{form.start_time.value | time:'H:i'}}" required>
                         </div>
                         
                     </div>
 
                     <div class="form-group row">
-                        <label for="comments" class="col-sm-2 col-form-label">Comments:</label>
+                        <div class="col-sm-2 col-form-label">
+                            <label for="comments">Comments:</label>
+                            {% if form.comments.errors %}
+                                {% for error in form.comments.errors %}
+                                    <div class="alert alert-danger">
+                                        <strong>{{ error | escape }}</strong>
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
+                        </div>
                         <div class="col-sm-10">
-                            <textarea class="form-control" rows="10" type="text" name="comments" required>{{form.comments.value}}</textarea>
+                            <textarea class="form-control" rows="10" type="text" name="comments" required>{% if form.comments.value != None %}{{form.comments.value}}{% endif %}</textarea>
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <label for="RPE" class="col-sm-2 col-form-label">RPE:</label>
+                        <div class="col-sm-2 col-form-label">
+                            <label for="RPE">RPE:</label>
+                            {% if form.RPE.errors %}
+                                {% for error in form.RPE.errors %}
+                                    <div class="alert alert-danger">
+                                        <strong>{{ error | escape }}</strong>
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
+                        </div>
                         <div class="col-sm-4">
                             <img src="{% static "img/RPE-scale.jpg" %}" alt="RPE-scale" style="width:100%;">   
                         </div>
@@ -50,14 +94,32 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
 
                         <div class="col-sm-5">
                             <div class="form-group row">
-                                <label for="Distance" class="col-sm-4 col-form-label">Distance (miles):</label>
+                                <div class="col-sm-4 col-form-label">
+                                    <label for="tot_dist">Distance:</label>
+                                    {% if form.tot_dist.errors %}
+                                        {% for error in form.tot_dist.errors %}
+                                            <div class="alert alert-danger">
+                                                <strong>{{ error | escape }}</strong>
+                                            </div>
+                                        {% endfor %}
+                                    {% endif %}
+                                </div>
                                 <div class="col-sm-8">
                                     <input type="number" class="form-control" rows="10" name="tot_dist" value="{{form.tot_dist.value}}" required></input>
                                 </div>
                             </div>
 
                             <div class="form-group row">
-                                <label for="Time" class="col-sm-4 col-form-label">Time (minutes):</label>
+                                <div class="col-sm-4 col-form-label">
+                                    <label for="tot_time">Time (minutes):</label>
+                                    {% if form.tot_time.errors %}
+                                        {% for error in form.tot_time.errors %}
+                                            <div class="alert alert-danger">
+                                                <strong>{{ error | escape }}</strong>
+                                            </div>
+                                        {% endfor %}
+                                    {% endif %}
+                                </div>
                                 <div class="col-sm-8">
                                     <input type="number" class="form-control" rows="10" name="tot_time" value="{{form.tot_time.value}}" required></input>
                                 </div>
