--- a/athletes/templates/athletes/performance.html
+++ b/athletes/templates/athletes/performance.html
@@ -21,9 +21,26 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
 
                     {% csrf_token %}
 
+                    <!-- copied from http://stackoverflow.com/questions/14647723/django-forms-if-not-valid-show-form-with-error-message -->
+                    {% if form.errors %}
+                        <div class="alert alert-danger">
+                                <strong>Please correct the errors below.</strong>
+                        </div>
+                    {% endif %}
+
+
                     <div class="form-group row">
 
-                        <label class="col-sm-1 col-form-label">Date: </label>
+                        <div class="col-sm-2 col-form-label">
+                            <label for="date">Date:</label>
+                            {% if form.date.errors %}
+                                {% for error in form.date.errors %}
+                                    <div class="alert alert-danger">
+                                        <strong>{{ error | escape }}</strong>
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
+                        </div>
                         <div for="date" class="col-sm-3">
                             <input type="date" for="date" name="date" class="form-control" required>
                         </div>
@@ -38,14 +55,32 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
                         
                         <div class="col-sm-8">
                             <div class="form-group row">
-                                <label class="col-sm-2 col-form-label">Value: </label>
+                                <div class="col-sm-2 col-form-label">
+                                    <label for="value">Value:</label>
+                                    {% if form.value.errors %}
+                                        {% for error in form.value.errors %}
+                                            <div class="alert alert-danger">
+                                                <strong>{{ error | escape }}</strong>
+                                            </div>
+                                        {% endfor %}
+                                    {% endif %}
+                                </div>
                                 <div for="date" class="col-sm-2">
                                     <input type="number" for="value" name="value" class="form-control" min="1" max="4" required>
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="col-sm-2 col-form-label">Description: </label>
-                                <div for="date" class="col-sm-10">
+                                <div class="col-sm-2 col-form-label">
+                                    <label for="comments">Description:</label>
+                                    {% if form.comments.errors %}
+                                        {% for error in form.comments.errors %}
+                                            <div class="alert alert-danger">
+                                                <strong>{{ error | escape }}</strong>
+                                            </div>
+                                        {% endfor %}
+                                    {% endif %}
+                                </div>
+                                <div for="comments" class="col-sm-10">
                                     <textarea class="form-control" rows="10" type="text" name="comments" required></textarea>
                                 </div>
                             </div>
