--- a/athletes/templates/athletes/base.html
+++ b/athletes/templates/athletes/base.html
@@ -4,7 +4,6 @@
 	<title>Activities</title>
 
 	{% load static %}
-
 	<meta charset="utf-8">
     <link href="{% static 'lib/css/keen-dashboards.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'lib/css/nv.d3.css' %}" rel="stylesheet" type="text/css"/>
@@ -18,6 +17,8 @@
 	{% load bootstrap3 %}
 	{% bootstrap_css %}
 	{% bootstrap_javascript %}
+
+	<script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
 
 </head>
 <body class="application">
