--- a/athletes/templates/athletes/edit.html
+++ b/athletes/templates/athletes/edit.html
@@ -18,10 +18,6 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
 
                     {% csrf_token %}
 
-<!--                     <p>
-                                {{ form }}
-                    </p>
- -->
                     <!-- copied from http://stackoverflow.com/questions/14647723/django-forms-if-not-valid-show-form-with-error-message -->
                     {% if form.errors %}
                         <div class="alert alert-danger">
@@ -57,7 +53,7 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
                             {% endif %}
                         </div>
                         <div for="start_time" class="col-sm-3">
-                            <input type="datetime-local" for="start_time" name="start_time" class="form-control" value="{{form.start_time.value | date:'Y-m-d'}}T{{form.start_time.value | time:'H:i'}}" required>
+                            <input type="datetime-local" for="start_time" name="start_time" class="form-control" value="{{form.start_time.value | date:'Y-m-d'}}T{{form.start_time.value | time:'H:i'}}" id='date'required>
                         </div>
                         
                     </div>
@@ -139,6 +135,8 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
             </div>
 
         {% endblock %}
+
+
 
 
 
