--- a/athletes/templates/athletes/edit.html
+++ b/athletes/templates/athletes/edit.html
@@ -95,7 +95,7 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
                         <div class="col-sm-5">
                             <div class="form-group row">
                                 <div class="col-sm-4 col-form-label">
-                                    <label for="tot_dist">Distance:</label>
+                                    <label for="tot_dist">Distance (Miles):</label>
                                     {% if form.tot_dist.errors %}
                                         {% for error in form.tot_dist.errors %}
                                             <div class="alert alert-danger">
@@ -105,7 +105,7 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
                                     {% endif %}
                                 </div>
                                 <div class="col-sm-8">
-                                    <input type="number" class="form-control" rows="10" name="tot_dist" value="{{form.tot_dist.value}}" required></input>
+                                    <input type="number" step="any" class="form-control" rows="10" name="tot_dist" value="{{form.tot_dist.value}}" required></input>
                                 </div>
                             </div>
 
