--- a/athletes/templates/athletes/edit.html
+++ b/athletes/templates/athletes/edit.html
@@ -111,7 +111,7 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
 
                             <div class="form-group row">
                                 <div class="col-sm-4 col-form-label">
-                                    <label for="tot_time">Time (minutes):</label>
+                                    <label for="tot_time">Time (Minutes):</label>
                                     {% if form.tot_time.errors %}
                                         {% for error in form.tot_time.errors %}
                                             <div class="alert alert-danger">
